@@ -6,7 +6,10 @@ import com.playdata.productservice.product.dto.ProductResDTO;
 import com.playdata.productservice.product.dto.ProductSaveReqDTO;
 import com.playdata.productservice.product.dto.ProductSearchDTO;
 import com.playdata.productservice.product.entity.Product;
+import com.playdata.productservice.product.entity.QProduct;
 import com.playdata.productservice.product.repository.ProductRepository;
+import com.querydsl.core.BooleanBuilder;
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,6 +25,8 @@ import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static com.playdata.productservice.product.entity.QProduct.*;
+
 @Service
 @RequiredArgsConstructor
 @Transactional
@@ -29,100 +34,117 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final ProductRepository productRepository;
-
     private final AwsS3Config s3Config;
+    private final JPAQueryFactory factory;
 
     public Product productCreate(ProductSaveReqDTO dto) throws IOException {
-        // 원본 이미지를 어딘가(기존에는 로컬)에 저장하고, 그 저장된 위치를 Entity에 세팅해야함.
-
-    /*    MultipartFile productImage = dto.getProductImage();
-
-        // 상품을 등록하는 과정에서 이미지 이름의 중복으로 인한 충돌을 방지하기 위해
-        // 랜덤한 문자열을 섞어서 충돌을 막아주자.
-        String uniqueFileName
-                = UUID.randomUUID() + "_" + productImage.getOriginalFilename();
-
-        // 특정 로컬 경로에 이미지를 전송하고, 그 경로를 Entity에 세팅하자.
-        File file =
-                new File("C:/Users/user/Desktop/Upload/" + uniqueFileName);
-
-        // 화면단에서 전달받은 이미지를 로컬 저장소로 보내기
-        try {
-            productImage.transferTo(file);
-        } catch (IOException e) {
-            throw new RuntimeException("이미지 저장 실패ㅠㅠ");
-        }*/
-
-        // 이제는 aws의 s3에 저장되게 하자!
 
         MultipartFile productImage = dto.getProductImage();
 
+        // 상품을 등록하는 과정에서, 이미지 이름의 충돌이 발생할 수 있기 때문에
+        // 랜덤한 문자열을 섞어서 파일 중복을 막아주자.
         String uniqueFileName
                 = UUID.randomUUID() + "_" + productImage.getOriginalFilename();
 
-        // 더 이상 로컬 경로에 이미지를 저장하지 말고, s3 버킷에 저장하자!
+        /*
+        // 특정 로컬 경로에 이미지를 전송하고, 그 경로를 Entity에 세팅하자.
+        File file
+                = new File("/Users/stephen/Desktop/playdata_8th_develop/upload/" + uniqueFileName);
+
+        try {
+            productImage.transferTo(file);
+        } catch (IOException e) {
+            throw new RuntimeException("이미지 저장 실패!");
+        }
+        */
+
+        // 더 이상 로컬 경로에 이미지를 저장하지 않고, s3 버킷에 저장
         String imageUrl
                 = s3Config.uploadToS3Bucket(productImage.getBytes(), uniqueFileName);
 
-
         Product product = dto.toEntity();
-        // 파일명이 아닌 S3 url이 저장될 것임.
-        product.setImagePath(imageUrl);
+        product.setImagePath(imageUrl); // 파일명이 아닌 S3 오브젝트의 url이 저장될 것이다.
 
         return productRepository.save(product);
+
     }
 
     public List<ProductResDTO> productList(ProductSearchDTO dto, Pageable pageable) {
+        BooleanBuilder builder = new BooleanBuilder();
 
-        Page<Product> all;
-        if(dto.getCategory() == null){
-            all = productRepository.findAll(pageable);
+        if (dto.getCategory() != null) {
+            if (dto.getCategory().equals("name")) {
+                builder.and(product.name.contains(dto.getSearchName()));
+            }
+
+            if (dto.getCategory().equals("category")) {
+                builder.and(product.category.contains(dto.getSearchName()));
+            }
         }
-        else if(dto.getCategory().equals("category")){
-            all = productRepository.findByCategoryValue(dto.getSearchName(),pageable);
+
+        List<Product> products = factory
+                .selectFrom(product)
+                .where(builder)
+                .offset(pageable.getOffset())
+                .limit(pageable.getPageSize())
+                .fetch();
+
+        return products.stream()
+                .map(Product::fromEntity)
+                .collect(Collectors.toList());
+
+        /*
+        Page<Product> products;
+        if (dto.getCategory() == null) {
+            products = productRepository.findAll(pageable);
+        } else if (dto.getCategory().equals("name")) {
+            products = productRepository.findByNameValue(dto.getSearchName(), pageable);
         } else {
-            all = productRepository.findByNameValue(dto.getSearchName(),pageable);
+            products = productRepository.findByCategoryValue(dto.getSearchName(), pageable);
         }
 
+        List<Product> productList = products.getContent();
 
-        return all.getContent()
-                .stream().map(Product::fromEntity)
-                .toList();
+        return productList.stream()
+                .map(Product::fromEntity)
+                .collect(Collectors.toList());
+
+        */
     }
 
     public void productDelete(Long id) throws Exception {
         Product product = productRepository.findById(id).orElseThrow(
-                () -> new EntityNotFoundException(id +"는 없는 제품"));
+                () -> new EntityNotFoundException("Product with id: " + id + " not found")
+        );
+
+        String imageUrl = product.getImagePath();
+        s3Config.deleteFromS3Bucket(imageUrl);
 
         productRepository.deleteById(id);
-        s3Config.deleteFromS3Bucket(product.getImagePath());
     }
 
-    public ProductResDTO prodFindById(Long prodId) {
-
-        Product product = productRepository.findById(prodId)
-                .orElseThrow(() -> new EntityNotFoundException(prodId + ""));
+    public ProductResDTO getProductInfo(Long prodId) {
+        Product product = productRepository.findById(prodId).orElseThrow(
+                () -> new EntityNotFoundException("Product with id: " + prodId + " not found")
+        );
 
         return product.fromEntity();
-
     }
 
-    public void updateStockQuantity(Long prodId, Integer stockQuantity) {
-
-        Product product = productRepository.findById(prodId)
-                .orElseThrow(() -> new EntityNotFoundException(prodId + ""));
-
-        product.setStockQuantity(stockQuantity);
-
-        productRepository.save(product);
-
+    public void updateStockQuantity(Long prodId, int stockQuantity) {
+        Product foundProduct = productRepository.findById(prodId).orElseThrow(
+                () -> new EntityNotFoundException("Product with id: " + prodId + " not found")
+        );
+        foundProduct.setStockQuantity(stockQuantity);
+        productRepository.save(foundProduct);
     }
 
     public List<ProductResDTO> getProductsName(List<Long> productIds) {
-
         List<Product> products = productRepository.findByIdIn(productIds);
 
-        return products.stream().map(Product::fromEntity).collect(Collectors.toList());
+        return products.stream()
+                .map(Product::fromEntity)
+                .collect(Collectors.toList());
     }
 
     public void cancelProduct(Map<Long, Integer> map) {
